image stretch fixed, images for all sections added

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,3 +5,7 @@ input[type='file'] {
 .image-upload>input {
   display: none;
 }
+
+.image-upload_edit>input {
+  display: none;
+}
